[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc"
version = "0.1.0"
description = "Python bindings for the SBC audio codec library"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "libsbc maintainers"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/skywalk-software/libsbc"
"Bug Tracker" = "https://github.com/skywalk-software/libsbc/issues"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["sbc"]
include-package-data = true
script-files = ["setup.py"]

[tool.setuptools.package-data]
sbc = ["*.so", "*.dylib", "*.dll"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "python/README.md"]} 